[package]
name = "splaycompress-benchmark"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
brotli2 = "0.3.2"
fake = { version = "2.9.2", features = ["derive"] }
flate2 = "1.0.30"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
splaycompress = { git = "https://github.com/BenWiederhake/splaycompress.git" }
